plexydesk (1.0.2) unstable; urgency=low

  * Windows Build Support 

 -- Siraj Razick <siraj@plexydesk.com>  Wed, 23 Jan 2016 21:03:00 -0400

plexydesk (1.0.1) unstable; urgency=low

  * Debian Build Support. - Fixes Compilatoin and Linker issues on Linux

 -- Siraj Razick <siraj@plexydesk.com>  Wed, 23 Jan 2016 21:03:00 -0400

plexydesk (1.0.0) unstable; urgency=low

  * New upstream version
  * New UI Library
  * New Data Library

 -- Siraj Razick <siraj@plexydesk.com>  Wed, 20 Jan 2016 21:03:00 -0400

plexydesk (0.6.6) unstable; urgency=low

  * Adds: flex and bison build requirements
  * New upstream version

 -- PhobosK <phobosk@kbfx.net>  Mon, 08 Oct 2012 21:03:00 -0400

plexydesk (0.6.5) unstable; urgency=low

  * Feature #11: Desktop Folder Handling
  * Feature #54: Write rpm spec file for plexydesk
  * Feature #71: Ability to drag and drop folders
  * Feature #72: Animated wallpaper swictching
  * Feature #86: define icon attribute for themepack groups
  * Feature #96: Unable to change the display picture in the Picture Frame.
  * Feature #100: Fix and use image cache class
  * Feature #112: merged shaders branch
  * Feature #128: Make Folderview work again on linux
  * Feature #137: rewrite the main runner for the default Desktop UI
  * Feature #146: Test for OpenGL and enable it by default
  * Feature #156: UNABLE TO ADD OR REMOVE EXTRA WIDGETS MANUALLY
  * Feature #162: split the QML specific stuff out of PlexydeskWidget
  * Feature #163: Move the system tray into into view plugin
  * Support #101: Make a plexydesk Screencast
  * Support #104: install https://github.com/sitaramc/gitolite
  * Bug #60: QML application quit
  * Bug #81: plexydesk is filled with junk
  * Bug #98: Inconsistent image paths in plexy
  * Bug #105: Do not produce log file when in release mode
  * Bug #107: background doesn't scale properly on start up
  * Bug #109: Shader branch does not build on windows
  * Bug #111: Segfault on Mandriva x86